# flttestlib

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: flttestlibConfig.cmake.in  macros.cmake
examples/: CMakeLists.txt  example.cpp
include/: flttestlib.h
src/: CMakeLists.txt  ErrorSearcher.h  ReciprocalDistribution.h  ReciprocalDistributionEx.h  SpecialDistribution.h  histogram.h  ulp.h  wrappers.h
tests/: CMakeLists.txt  tests.cpp
